# PiBot

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  maintenance.py  pyproject.toml  rebuild.sh  requirements.txt
components/: admin.py  ai.py  discordenvs.py  embeds.py  events.py  exceptions.py  misc.py  mtg.py
database/: oracle.py
